--- a/src/components/Dropdown.less
+++ b/src/components/Dropdown.less
@@ -5,7 +5,6 @@
   line-height: 1;
   position: relative;
   text-align: left;
-  z-index: 1;
 
   *,
   *::before,
@@ -22,7 +21,7 @@
       display: inline-flex;
       background: linear-gradient(to bottom, #eceff1 0%,#dde3e6 100%);
       border-radius: 3px;
-      box-shadow: 0 1px 0 0 #cfd8dc;
+      box-shadow: inset 0 -1px 0 0 #cfd8dc;
       flex-flow: row nowrap;
       height: 40px;
       padding-left: 20px;
@@ -178,6 +177,7 @@
   &__button {
     background: linear-gradient(to bottom, #eceff1 0%,#dde3e6 100%);
     border-radius: 3px;
+    box-shadow: inset 0 -1px 0 0 #cfd8dc;
     cursor: pointer;
     color: #243238;
     display: flex;
@@ -244,6 +244,7 @@
     &:hover,
     &:focus {
       background: linear-gradient(to bottom, #78909c 0%, #546e7a 100%);
+      box-shadow: inset 0 -1px 0 0 #546e7a;
     }
 
     &:focus {
@@ -252,10 +253,12 @@
 
     &:active {
       background: linear-gradient(to bottom, #455a64 0%, #546e7a 100%);
+      box-shadow: inset 0 -1px 0 0 #546e7a;
     }
 
     &_open {
       background: #546e7a;
+      box-shadow: none;
 
       .tm-quark-dropdown_open-position_bottom & {
         border-radius: 3px 3px 0 0;
@@ -324,6 +327,7 @@
     left: 0;
     transform: scale(0);
     width: 100%;
+    z-index: 1;
 
     .tm-quark-dropdown_open-position_top & {
       border-top-left-radius: 3px;
